Add groovy test